@@ -1,3 +1,15 @@
+2003-09-21  Tor Lillqvist  <tml@iki.fi>
+
+	* configure.in: Check for Win32, set OS_WIN32 automake
+	variable. Check for strtok_r.
+
+	* Makefile.am: Use -lm only on Unix. Add LIBGSF_LIBS and
+	LIBCROCO_LIBS to librsvg_2_la_LIBADD.
+
+	* rsvg-css.c: Use G_PI instead of M_PI.
+	(strtok_r): Implement strtok_r here if not available. (Very
+	suboptimal implementation.)
+
 2003-09-19  Sven Neumann  <sven@gimp.org>
 
 	* rsvg-file-util.c: implemented missing GError handling for file
